# rgb_keyboard

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  TODO.md  constructor.cpp  data.cpp  fileio.cpp  getters.cpp  helpers.cpp  macro.cpp  macro.h  print_help.cpp  print_help.h  print_keycodes.cpp  readers.cpp  rgb_keyboard.1  rgb_keyboard.cpp  rgb_keyboard.h  setters.cpp  writers.cpp
doc/: README.md  compiling.md
